--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                     Login
                 </div>
             </div>
+            <div class="flex">
+                <div id="titolo-centrale">
+                
+                </div>
+            </div>
         </header>  
 
     </body>
