--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
     
         <header class="flex">
-            <div class="default flex">
+            <div class="default flex first-div-header">
                 <div id="logo">
                     Logo
                 </div>
@@ -21,10 +21,8 @@
                     Login
                 </div>
             </div>
-            <div class="flex">
-                <div id="titolo-centrale">
-                
-                </div>
+            <div class="flex second-div-header">
+                <div id="titolo-centrale"></div>
             </div>
         </header>  
 
