Secondo perfezionamento del header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,26 @@
                 </div>
             </div>
             <div class="flex second-div-header">
-                <div id="titolo-centrale"></div>
+                <div id="titolo-centrale">
+                    <h1>
+                        Il tuo posto per parlare
+                    </h1>
+                    <p>
+                        Che tu faccia parte di un club scolastico, 
+                        gruppo di gamer, comunità artistica mondiale,
+                        o semplicemente di un piccolo gruppo di amici
+                        che vuole passare del tempo assieme, Discord rende
+                        più facile chiacchierare ogni giorno e 
+                        ritrovarsi più spesso.
+                    </p>
+                    <button>
+
+                    </button>
+                    
+                    <button>
+
+                    </button>
+                </div>
             </div>
         </header>  
 
